--- a/config/service.properties
+++ b/config/service.properties
@@ -1,6 +1,8 @@
-order.buy=0
-order.sell=0
-order.sellPrice=0.00000100
+common.satoshiPrefix=0.00000
+
+order.sellPrice=100
+order.sellAmount=100
+order.buyAmount=0
 
 api.uri.scheme = http
 api.uri.host = api.bcex.vip
